fixed img top alignment

--- a/style.css
+++ b/style.css
@@ -209,7 +209,6 @@ a {
     /* border: 1px solid sandybrown; */
 }
 
-
 .project > div span {
     background: #C0C5Ce;
     font-family: 'Merriweather Sans', sans-serif;
@@ -225,17 +224,15 @@ a {
 
 .project-img-container {
     width: 350px;
-    /* border: 1px solid red; */
     margin-left: 2em;
-    
-    
 }
 
 .project-img {
+    margin-top: 1.6em;
     width: 100%;
     height: auto;
-    opacity: initial;
-    background: linear-gradient(305deg, rgba(205,113,120,1) 0%, rgba(197,148,197,1) 80%);
+    /* opacity: initial; */
+    /* background: linear-gradient(305deg, rgba(205,113,120,1) 0%, rgba(197,148,197,1) 80%); */
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
